# HierarchyTransformers

./: .gitignore  LICENSE  README.md  classification_finetune.py  classify_finetune.py  config.yaml  evaluate.py  example_config.yaml  fetch_wordnet_data.py  hierarchy_retrain.py  maskfill_eval.py  ppl_eval.py  pyproject.toml  requirements.txt  retrain.py  setup.cfg  similarity_eval.py  static_pretrain.py  train_gensim_poincare.py  train_poincare.py  train_static.py  train_wordnet.py  transfer_eval.py  trial.py  trial_triplet.py
.github/workflows/: python-publish.yml
data_scripts/: fetch_wordnet_data.py
docs/: changelog.md  index.html
docs/static/css/: bulma-slider.min.css  bulma.min.css  fontawesome.all.min.css  index.css
helm/: evaluator.py  loss.py  projection.py  utils.py
helm/loss/: __init__.py  centri_loss.py  cluster_loss.py  cone_loss.py  hyper_loss.py
hierarchy_transformer/: evaluator.py  loss.py  utils.py
hierarchy_transformer/deprecated/: model.py  taxonomy.py
hierarchy_transformer/deprecated/eval/: reconstruct.py
hierarchy_transformers/: __init__.py  dataset.py  model.py  static.py  utils.py
hierarchy_transformers/evaluation/: __init__.py  classification_eval.py  eval_functions.py  eval_metrics.py  hierarchy_eval.py  hit_eval.py  hyper_loss_eval.py  maskfill_eval.py  pretrained_eval.py  retrained_eval.py  similarity_eval.py  static_embed_eval.py  static_eval.py
hierarchy_transformers/loss/: cluster_loss.py  hyper_loss.py
hierarchy_transformers/losses/: __init__.py  centri_loss.py  cone_loss.py  hyper_loss.py
hierarchy_transformers/models/: __init__.py  hit.py
hierarchy_transformers/utils/: __init__.py  construct.py  data.py  plot.py
hite/: evaluation.py  evaluator.py  model.py  static.py  utils.py  visualisation.py
hite/evaluation/: __init__.py  hyper_loss_eval.py  perplexity_eval.py  similarity_eval.py  static_eval.py
hite/loss/: __init__.py  centri_loss.py  cone_loss.py  hyper_loss.py
holm/: __init__.py  evaluator.py  loss.py  model.py  pooling.py  taxonomy.py  trainer.py
holm/deprecated/: trainer.py
holm/eval/: reconstruct.py
holm/graph/: __init__.py  hypernym_graph.py
hyperonto/: __init__.py
hyperonto/eval/: reconstruct.py
hyperonto/graph/: hypernym_graph.py
hyperonto/poincare/: __init__.py  model.py
hypertrans/: trainer.py
hypertrans/eval/: __init__.py  reconstruct.py
hypertrans/graph/: __init__.py  hypernym_graph.py
hypertrans/poincare/: base.py  model.py  trainer.py
poincare/graph/: __init__.py  hypernym_graph.py  subsumption_graph.py
poincare/models/: __init__.py
scripts/: classify_finetune.py  evaluate.py  example_config.yaml  hierarchy_retrain.py  static_pretrain.py
scripts/evaluation/: config.yaml  eval_hit.py
scripts/evaluation/hit/: eval_hit.py
scripts/evaluation/sbert/: config_sbert.yaml  eval_sbert.py
scripts/training/: config_hit.yaml
scripts/training/hit/: config_hit.yaml  training_hit.py
scripts/training/sft/: config_sft.yaml  training_sft.py
scripts/training/static_embed/: config_static.yaml  training_static.py
src/hierarchy_transformers/: __init__.py  plot.py  utils.py
src/hierarchy_transformers/datasets/: __init__.py  construct.py  deprecated.py  load.py
src/hierarchy_transformers/evaluation/: __init__.py  hierarchy_eval.py  hit_eval.py  metircs.py  metrics.py  pretrained_eval.py  sbert_eval.py  static_embed_eval.py  static_eval.py
src/hierarchy_transformers/losses/: __init__.py  centri_loss.py  cluster_loss.py  (+5 more)
tests/: __init__.py  test_dataset_loading.py  test_hit_loading.py  test_hit_training.py  test_loading_dataset.py  test_loading_hit.py  test_projection.py  test_training_hit.py
(+22 files in other folders)
