[metadata]
name = hierarchy_transformers
version = 0.0.3
author = Yuan He (KRR-Oxford)
author_email = yuan.he@cs.ox.ac.uk
license = Apache License 2.0
license_files = LICENSE
description = Language models as hierarchy encoders.
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://krr-oxford.github.io/DeepOnto/#/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    sentence_transformers[train]>=3.0.0,<=3.3.1
    deeponto>=0.8.8
    geoopt==0.5.0
    scipy==1.13.1
    seaborn

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-env

[options.package_data]
* = *.jar, *.yaml, lib/*.jar

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = --verbose --cov=hierarchy_transformers --cov-report=term-missing
env =
    MODEL_NAMES = Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT
    DATASET_NAMES = Hierarchy-Transformers/WordNetNoun,Hierarchy-Transformers/SnomedCT